2007-10-24  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-podcast.c: (totem_pl_parser_is_opml),
	(totem_pl_parser_is_xml_feed), (parse_rss_items),
	(totem_pl_parser_add_rss), (parse_opml_outline),
	(parse_opml_head_body), (totem_pl_parser_add_opml):
	* src/plparse/totem-pl-parser-podcast.h:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_ignore),
	(totem_pl_parser_ignore_from_mimetype),
	(totem_pl_parser_parse_internal),
	(totem_pl_parser_can_parse_from_data): Add support for OPML feeds
	(Closes: #489519)

2007-10-23  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/Makefile.am:
	* src/plugins/youtube/youtube.py:
	* src/plugins/youtube/youtube.ui:
	* src/totem-cell-renderer-video.c:
	(totem_cell_renderer_video_class_init),
	(totem_cell_renderer_video_init),
	(totem_cell_renderer_video_set_property),
	(totem_cell_renderer_video_get_property), (get_size),
	(totem_cell_renderer_video_render):
	* src/totem-video-list.c: (totem_video_list_new),
	(totem_video_list_class_init), (totem_video_list_init),
	(totem_video_list_set_property), (totem_video_list_get_property),
	(query_tooltip_cb), (selection_changed_cb), (row_activated_cb):
	* src/totem-video-list.h: Create a new TotemVideoList object,
	enabling tooltips on lists of videos (as in the YouTube plugin),
	and moving other functionality -- such as play-on-cell-activation
	 -- support out too (Closes: #488826)

2007-10-23  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/plparser.symbols: export totem_pl_parser_parse_date
	as used by Podcasts
	* src/plparse/totem-pl-parser.h: summary is
	description in Podcasts
	* src/plparse/xmlparser.c: (xml_parser_get_node_internal):
	Fix uninitialised variable warning in valgrind

2007-10-23  Philip Withnall  <pwithnall@svn.gnome.org>

	* configure.in: Decrease Python dependency back to 2.3,
	and bump up PyGTK dependency to 2.12 (it should've been
	bumped when the YouTube plugin was committed) (Closes: #489306)
